@@ -57,7 +57,6 @@ Additionally, the following options must be added to the `JVM_OPTS` parameter in
 --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
 --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
 --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
---add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
 --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
 --add-opens=java.base/java.io=ALL-UNNAMED
 --add-opens=java.base/java.nio=ALL-UNNAMED
@@ -85,7 +84,6 @@ configure and run Ignite.
     --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED\
     --add-opens=java.base/sun.nio.ch=ALL-UNNAMED\
     --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED\
-    --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED\
     --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED\
     --add-opens=java.base/java.io=ALL-UNNAMED\
     --add-opens=java.base/java.nio=ALL-UNNAMED\
@@ -137,7 +135,6 @@ Additionally, the following options must be added to the `JAVA_OPTS` parameter i
 --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
 --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
 --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
---add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
 --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
 --add-opens=java.base/java.io=ALL-UNNAMED
 --add-opens=java.base/java.nio=ALL-UNNAMED
